--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
 		<title>Hexagonal UI</title>
 	</head>
 	<body>
 		<div id="root"></div>
 		<script
 			type="module"
-			src="./index.ts"
+			src="/src/index.tsx"
 		></script>
 	</body>
 </html>
